# anchortv

./: .envrc  .gitignore  README.md  app.py  config.py  config.toml.example  pyproject.toml  reload.py  sheets.py  tv.py
pi/: anchor-webapp.service  openbox.autostart.sh  tv-schedule.service
templates/: index.jinja
